--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "azn-core"
-version = "0.1.0"
+name = "authorization-core"
+version = "0.2.0"
+authors = ["Greg Wiley <aztec.rex@jammm.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
